fix filter input overflow

--- a/client/src/components/Filter/Filter.css
+++ b/client/src/components/Filter/Filter.css
@@ -3,10 +3,11 @@
   width: 100%;
 }
 .Filter input {
-  width: 98%;
+  width: 100%;
   padding: 5px 7px;
   font-size: 0.95em;
   font-family: inherit;
   border-radius: 3px;
   border: 1px solid grey;
+  box-sizing: border-box;
 }
